# tinyRacing

./: .dockerignore  .env.sample  .gitignore  DOCKER.md  LICENSE  Makefile  Readme.md  api_documentation.md  docker-compose.test.yml  docker-compose.yml  nginx-proxy-example.conf
server/: .dockerignore  .gitignore  Cargo.toml  DATABASE_SETUP.md  Dockerfile  SQLX_SETUP.md  docker-entrypoint.sh  short.json  track.json
server/.sqlx/: query-277af05242627ddb931f7f35f64b05c0f40f3828f181d662039b3067a783f5df.json
server/examples/: database_example.rs  generate_driver_avatar.rs  run_migrations.rs  seed_db.rs  seed_db_test.rs
server/migrations/: 20240101000000_initial_schema.sql  20251117_initial_schema.sql  20251130000000_add_password_hash_to_player.down.sql  20251130155841_create_jwt_tokens.down.sql  20251130_add_password_hash_to_player.up.sql  20251201_create_jwt_tokens.up.sql  20251204000000_add_player_id_to_team.up.sql  20251204_add_player_id_to_team.down.sql  20251206000000_add_cash_to_team.down.sql  20251206000000_add_cash_to_team.up.sql  20251207000000_create_races_table.down.sql  20251207000000_create_races_table.up.sql  20251208000000_create_registration_table.down.sql  20251208000000_create_registration_table.up.sql  20251209000000_create_event_table.down.sql  20251209000000_create_event_table.up.sql  20251210000000_create_race_result_table.down.sql  20251210000000_create_race_result_table.up.sql  20251211000000_add_experience_to_driver.down.sql  (+3 more)
server/src/: api.rs  auth.rs  commands.rs  (+8 more)
track_preprocessor/: README.md  process.py  pyproject.toml  requirements.txt
(+99 files in other folders)
