[package]
name = "tiny_racing"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
pancurses = "0.17.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
warp = "0.3"
ncurses = "*"

[workspace]
